--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>U.S. Marciano Robur</title>
   <link rel="stylesheet" href="style.css" />
+  <img src="img/calcio.jpg" alt="Foto Home" style="max-width:100%; height:auto; border-radius: 8px; margin-top: 20px;">
 </head>
 <body>
   <header>
