--- a/contatti.html
+++ b/contatti.html
@@ -23,7 +23,7 @@
   <main class="content">
     
 <h2 class="fade-in">Contattaci</h2>
-<p class="fade-in delay-1">Email: info@usmarciano.it<br>Telefono: +39 123 456 7890<br>Indirizzo: Via dello Sport, Marciano (PG)</p>
+<p class="fade-in delay-1">Email: info@usmarciano.it<br>Telefono: +39 123 456 7890<br>Indirizzo: Via dello Sport, Marciano (SI)</p>
 
   </main>
   
