--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
 <section class="hero">
   <h1 class="fade-in">Benvenuti alla U.S. Marciano Robur</h1>
-  <p class="fade-in delay-1">Passione, sport e comunità dal cuore dell’Umbria</p>
+  <p class="fade-in delay-1">Passione, sport e comunità dal cuore della Toscana</p>
   <img src="img/calcio.jpg" alt="Squadra di calcio" class="hero-img slide-up delay-2" />
 </section>
 
